@@ -19,7 +19,8 @@ Cacti CHANGELOG
 -bug#0001429: PHP does not support SNMP V3 Contexts and Cacti needs to act accordingly
 -bug#0001432: array_merge breaks dropdown handling with hardcoded (array-)keys
 -bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template 
--bug#0001461: (Data Query) Export/Import fails 
+-bug#0001461: (Data Query) Export/Import fails
+-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
 -bug#0001506: Reindexing fails in snmp.php
 -bug#0001522: Special(?) charakters break parsing of template data.
 -bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
